--- a/sass/_animations.scss
+++ b/sass/_animations.scss
@@ -1,29 +1,30 @@
 //animaciones para wsp e imagenes
 
 @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
 
 .whatsapp-button {
-    animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
 }
 
 .imghvr-push-left {
-    img {
-      width: 100%;
-      height: auto;
-      transition: transform 0.3s ease-in-out;
-    }
-    
-    figcaption {
-      background: rgba(0, 0, 0, 0.7);
-      color: white;
-      padding: 15px;
-      font-size: 18px;
-    }
-    
-    &:hover img {
-      transform: translateX(-10px);
-    }
+  img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    transition: transform 0.3s ease-in-out;
   }
+  
+  figcaption {
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 15px;
+    font-size: 18px;
+  }
+  
+  &:hover img {
+    transform: translateX(-10px);
+  }
+}
